--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,15 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "baseUrl": "src",
+    "paths": { 
+      "@/components/*": ["components/*"],
+      "@/utils/*": ["utils/*"],
+      "@/pages/*": ["pages/*"],
+      "@/fetchRoutes/*": ["fetchRoutes/*"],
+      "@/hooks/*": ["hooks/*"]
+  }
   },
   "include": [
     "src"
