--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage" : "https://colniiiiko.github.io/notes-fe",
+  "homepage" : "https://colniiiiko.github.io/notes-fe/",
   "name": "fe",
   "version": "0.1.0",
   "private": true,
